fixed render without font family

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
@@ -33,7 +31,6 @@
                             <option value="TEAM_PRO_TWITTER">Equipa PRO Twitter</option>
                         </select>
                     </div>
-
                     <div id="dynamic_form" class="mb-3"> </div>
                     <div class="form-group d-flex justify-content-center align-items-center">
                         <button type="button" class="btn btn-success btn-lg"
@@ -41,6 +38,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="fixed-bottom">
+            <h6>RC001-127</h6>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
