--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/static/styles.css" />
     <title>BANNER GENARATER</title>
 </head>
 
@@ -39,9 +39,11 @@
                             </select>
                         </div>
                         <div id="dynamic_form_options" class="mb-3"> </div>
-                        <div class="form-group d-flex justify-content-center align-items-center">
-                            <button type="button" class="btn btn-success btn-lg"
-                                onclick="download_image()">DOWNLOAD</button>
+
+                        <div class="btn-toolbar  d-flex justify-content-between">
+                            <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
+                                INSTA</button>
+                            <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
                         </div>
                     </div>
                 </div>
@@ -61,7 +63,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 
 </html>
