--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         </div>
                         <div id="dynamic_form_options" class="mb-3"> </div>
 
-                        <div class="btn-toolbar  d-flex justify-content-between">
-                            <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
-                                INSTA</button>
+                        <div class="btn-toolbar  d-flex justify-content-center">
+                            <!-- <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
+                                INSTA</button> -->
                             <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
                         </div>
                     </div>
@@ -63,6 +63,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="/static/mapped.js"></script>
     <script src="/static/script.js"></script>
 </body>
 
