--- a/index.html
+++ b/index.html
@@ -32,19 +32,13 @@
                         <div class="form-group">
                             <label for="exampleInputEmail1">TIPO DO BANNER</label>
                             <select class="custom-select" id="bannerType" onchange="onBannerTypeSelectChange()">
-                                <option value="insta">Instagram</option>
-                                <option value="RESULT_INSTA">Resultado Instagram</option>
-                                <option value="twitter">Twitter</option>
-                                <option value="RESULT_TWITTER">Resultado Twitter</option>
-                                <option value="TEAM_PRO_INSTA">Equipa PRO Instagram</option>
-                                <option value="TEAM_PRO_TWITTER">Equipa PRO Twitter</option>
                             </select>
                         </div>
                         <div id="dynamic_form_options" class="mb-3"> </div>
 
                         <div class="btn-toolbar  d-flex justify-content-center">
-                            <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
-                                INSTA</button>
+                            <!-- <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
+                                INSTA</button> -->
                             <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
                         </div>
                     </div>
@@ -65,7 +59,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="/static/mapped.js"></script>
     <script src="/static/script.js"></script>
 </body>
 
