--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/css/bootstrap-switch-button.min.css"
-        rel="stylesheet">
     <link rel="stylesheet" href="/static/styles.css" />
     <title>BANNER GENARATER</title>
 </head>
 
 <body>
     <main>
-        <div class="d-flex flex-column justify-content-center align-items-start" style="max-width: 450px">
-            <div class="card" style="width: 22rem;">
+        <div class="d-flex flex-column justify-content-center align-items-start bg-light" style="max-width: 450px">
+            <div class="card shadow-sm" style="width: 22rem;">
                 <div id="formBanner" class="card-body">
                     <div id="dynamic_form" class="mb-3"> </div>
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;">
+        <div class="d-flex flex-column justify-content-center align-items-center bg-light" style="width: 100%;">
             <canvas id="preview_canvas" style="display: none;"></canvas>
-            <img id="preview_image">
+            <img class="shadow-lg" id="preview_image">
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center" style="max-width: 450px">
-            <div class="card" style="width: 22rem;">
+        <div class="d-flex flex-column justify-content-center align-items-center bg-light" style="max-width: 450px">
+            <div class="card shadow-sm" style="width: 22rem;">
                 <div class="card-body">
                     <div class="form-group">
                         <label>TIPO DO BANNER</label>
@@ -39,6 +37,7 @@
                     <div class="btn-toolbar  d-flex justify-content-center">
                         <!-- <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
                             INSTA</button> -->
+
                         <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
                     </div>
                 </div>
@@ -55,8 +54,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/dist/bootstrap-switch-button.min.js"></script>
 
     <script src="/static/script.js"></script>
 </body>
