added dynamic image size

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center bg-light" style="width: 100%;">
+        <div class="d-flex flex-column justify-content-center align-items-center bg-light  ps-5 pe-5"
+            style="width: 100%;">
             <canvas id="preview_canvas" style="display: none;"></canvas>
-            <img class="shadow-lg" id="preview_image">
+            <img class="shadow-lg img-fluid" id="preview_image">
         </div>
         <div class="d-flex flex-column justify-content-center align-items-center bg-light" style="max-width: 450px">
             <div class="card shadow-sm" style="width: 22rem;">
@@ -37,7 +38,6 @@
                     <div class="btn-toolbar  d-flex justify-content-center">
                         <!-- <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
                             INSTA</button> -->
-
                         <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
                     </div>
                 </div>
