--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
 <body>
     <main>
         <div class="d-flex flex-column justify-content-center align-items-start bg-light" style="max-width: 450px">
-            <div class="card shadow-sm" style="width: 22rem;">
-                <div id="formBanner" class="card-body">
-                    <div id="dynamic_form" class="mb-3"> </div>
+            <div class="card shadow-sm h-100" style="width: 22rem;">
+                <div id="formBanner"
+                    class="card-body  d-flex flex-row  justify-content-center align-items-start w-100 h-100 p-2 overflow-auto">
+                    <div id="dynamic_form" class="mb-3 w-100"> </div>
                 </div>
             </div>
         </div>
@@ -28,17 +29,17 @@
             <img class="shadow-lg img-fluid" id="preview_image">
         </div>
         <div class="d-flex flex-column justify-content-center align-items-center bg-light" style="max-width: 450px">
-            <div class="card shadow-sm" style="width: 22rem;">
-                <div class="card-body">
-                    <div class="form-group">
+            <div class="card shadow-sm h-100" style="width: 22rem;">
+                <div class="card-body  d-flex flex-column  justify-content-center align-items-center p-2 w-100">
+                    <div class="form-group w-100">
                         <label>TIPO DO BANNER</label>
-                        <select class="form-select" id="bannerType" onchange="onBannerTypeSelectChange()"></select>
+                        <select class="form-select w-100" id="bannerType"
+                            onchange="onBannerTypeSelectChange()"></select>
                     </div>
-                    <div id="dynamic_form_options" class="mb-3"> </div>
-                    <div class="btn-toolbar  d-flex justify-content-center">
-                        <!-- <button type="button" class="btn btn-warning" onclick="publish_insta()">PUBLISH ON
-                            INSTA</button> -->
-                        <button type="button" class="btn btn-success" onclick="download_image()">DOWNLOAD</button>
+                    <div id="dynamic_form_options" class="mb-3 d-flex flex-column justify-content-start w-100 mb-auto">
+                    </div>
+                    <div class="btn-toolbar  d-flex justify-content-center w-100">
+                        <button type="button" class="btn btn-success w-100" onclick="download_image()">DOWNLOAD</button>
                     </div>
                 </div>
             </div>
