add function signIn

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -40,7 +40,7 @@
                                 <input type="checkbox" name="data[User][remember_me]" value="1" id="UserRememberMe"> Remember Me?</label>
                         </div>
                         <div class="control-group">
-                            <input class="btn btn-primary btn-large btn-block" type="submit" value="Sign in">
+                            <input class="btn btn-primary btn-large btn-block" type="submit" value="Sign in" onclick="">
                         </div>
                     </form>
                 </div><!--/.login-->
@@ -56,6 +56,7 @@
             crossorigin="anonymous"></script>
 
     <script src="/static/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
