auth with cookies still not working

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -22,7 +22,7 @@
                     <!--<div class="center">
                         <img src="http://placehold.it/250x100&text=Logo" alt="logo">
                     </div>-->
-                    <form action="/" style="" class="login-form" id="UserLoginForm" method="post" accept-charset="utf-8">
+                    <div style="" class="login-form" id="UserLoginForm">
                         <div class="control-group">
                             <div class="input-prepend">
                                 <span class="add-on"><i class="icon-user"></i></span>
@@ -40,9 +40,9 @@
                                 <input type="checkbox" name="data[User][remember_me]" value="1" id="UserRememberMe"> Remember Me?</label>
                         </div>
                         <div class="control-group">
-                            <input class="btn btn-primary btn-large btn-block" type="submit" value="Sign in" onclick="">
+                            <input class="btn btn-primary btn-large btn-block" type="submit" value="Sign in" onclick="login()">
                         </div>
-                    </form>
+                    </div>
                 </div><!--/.login-->
             </div><!--/.span12-->
         </div><!--/.row-fluid-->
@@ -54,9 +54,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
             crossorigin="anonymous"></script>
-
-    <script src="/static/script.js"></script>
-    <script src="script.js"></script>
+    <script src="/static/login/script.js"></script>
 </body>
 
 </html>
